<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.jaderbittencourt.sicredidigital.viewmodel.CheckInViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/dialog_title"/>

        <TextView
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_text"/>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:text="@{viewModel.name}"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif"
            android:text="@{viewModel.email}"
            android:hint="@string/email"/>
    </LinearLayout>
</layout>

