<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.jaderbittencourt.sicredidigital.viewmodel.DetailsViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true" />

            <View
                android:id="@+id/image_divider"
                style="@style/rowDivider"
                android:layout_below="@+id/image" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_divider"
                android:text="@{viewModel.title}"
                android:textStyle="bold" />

            <View
                android:id="@+id/title_divider"
                style="@style/rowDivider"
                android:layout_below="@+id/title" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_divider"
                android:text="@{viewModel.description}" />

            <View
                android:id="@+id/row_divider"
                style="@style/rowDivider"
                android:layout_below="@+id/description" />

            <TextView
                android:id="@+id/price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/row_divider"
                android:layout_alignParentStart="true"
                android:text="@string/price"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/row_divider"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/price_label"
                android:text="@{viewModel.price}" />

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/row_divider"
                android:layout_toStartOf="@+id/date"
                android:text="@string/date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/row_divider"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="8dp"
                android:text="@{viewModel.date}" />

            <View
                android:id="@+id/price_divider"
                style="@style/rowDivider"
                android:layout_below="@+id/date" />

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/price_divider"
                android:layout_alignParentStart="true"
                android:text="@string/address"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_label"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.address}" />

            <TextView
                android:id="@+id/maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> viewModel.openMaps()}"
                android:text="@string/open_maps"
                android:textColor="@color/lightBlue"
                android:textStyle="bold" />

            <View
                android:id="@+id/address_divider"
                style="@style/rowDivider"
                android:layout_below="@+id/maps" />

            <TextView
                android:id="@+id/people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address_divider"
                android:text="@string/people"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/images_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/people"
                android:orientation="vertical" />

            <View
                android:id="@+id/people_divider"
                style="@style/rowDivider"
                android:layout_below="@+id/images_container" />


            <VideoView
                android:id="@+id/buttons_divider"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_below="@+id/people_divider"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_below="@+id/people_divider"
                android:layout_toStartOf="@+id/buttons_divider"
                android:onClick="@{() -> viewModel.openDialog()}"
                android:background="@drawable/round_button"
                android:padding="12dp"
                android:src="@drawable/ic_checkin" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_below="@+id/people_divider"
                android:layout_toEndOf="@+id/buttons_divider"
                android:background="@drawable/round_button"
                android:onClick="@{() -> viewModel.share()}"
                android:padding="12dp"
                android:src="@drawable/ic_share" />

        </RelativeLayout>

    </ScrollView>


</layout>